[workspace]
[package]
name = "measurement_tool"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
tokio = { version = "1.42", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.6"
hex = "0.4.3"
sha2 = "0.10.7"
glob = "0.3"
async-trait = "0.1.83"
ttrpc = { version = "0.8.4", features = ["async"] }
protobuf = "3.5.1"
thiserror = "2.0"
notify = "6.1.1"
regex = "1.11.1"
tempfile = "3.13.0"
reqwest = { version = "0.10.10", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"

[build-dependencies]
ttrpc-codegen = "0.5.0" 
url = "=2.2.2"